--- a/info.html
+++ b/info.html
@@ -13,8 +13,8 @@ permalink: /info/index.html
 
 <p>The website is designed around the idea of staying alert, and is inspired by some of the themes presented in this class.</p>
 
-<p><a href="https://docs.google.com/document/d/10_OBOOdFk3AfyrnyAWjOvvR35NfrKr0Ze9-e1xDXdXo/edit?usp=sharing">View the Studio syllabus</a></p>
-<p><a href="https://docs.google.com/document/d/1ktM7xaN33QZ-92QOj-m5ZxwKhgc42PRwXjUc1w2eKQQ">View the Lab syllabus</a></p>
+<p><a href="#">View the Studio syllabus</a></p>
+<p><a href="#">View the Lab syllabus</a></p>
 
 <h3>Contact</h3>
 
