--- a/info.html
+++ b/info.html
@@ -7,14 +7,14 @@ permalink: /info/index.html
 
 <p>This is the website for Core Interaction, Section A. This is an introductory interactive design class taught by <a href="http://nikasimovich.com/">Nika Fisher</a> and <a href="http://dylanfisher.com/">Dylan Fisher</a>. All assignments, notes, readings, and other materials will be housed on this website.</p>
 
-<p>The studio class meets on Tuesdays and Fridays from 9 to 11:40 am in 63 5th Avenue, Room 310.</p>
+<p>The studio class meets on Tuesdays and Fridays from 9 to 11:40 am in 2&nbsp;West 13th, Room 1011.</p>
 
-<p>The lab class meets on Wednesday evenings from 7 to 9:40 pm in 63 5th Avenue, Room 404.</p>
+<p>The lab class meets on Wednesday evenings from 7 to 9:40 pm in 2&nbsp;West 13th, Room 1006.</p>
 
-<p>The website is designed around the idea of staying alert, and is inspired by some of the themes presented in this class.</p>
+<h3>Syllabus</h3>
 
-<p><a href="#">View the Studio syllabus</a></p>
-<p><a href="#">View the Lab syllabus</a></p>
+<p><a href="https://paper.dropbox.com/doc/Core-Studio-Interaction-Syllabus-5mIBfrckElMygBhERAXTM">View the Studio syllabus</a></p>
+<p><a href="https://paper.dropbox.com/doc/Core-Lab-Interaction-Syllabus-AkTZwpiMfviroyEGsPJUn">View the Lab syllabus</a></p>
 
 <h3>Contact</h3>
 
@@ -23,4 +23,4 @@ permalink: /info/index.html
 
 <hr>
 
-<p>This website is built using <a href="https://jekyllrb.com/">Jekyll</a> and hosted on <a href="https://pages.github.com/">GitHub Pages</a>. You can view the source code of this website at <a href="https://github.com/dylanfisher/ci19">https://github.com/dylanfisher/ci18</a>.</p>
+<p>This website is built using <a href="https://jekyllrb.com/">Jekyll</a> and hosted on <a href="https://pages.github.com/">GitHub Pages</a>. You can view the source code of this website at <a href="https://github.com/dylanfisher/ci19">https://github.com/dylanfisher/ci19</a>.</p>
