--- a/students.html
+++ b/students.html
@@ -4,7 +4,8 @@ permalink: /students/index.html
 ---
 
 <div class="student-list">
-  {% for student in site.students %}
+  {% assign students = site.students | sort: 'last_name' %}
+  {% for student in students %}
     {% assign github_username = student.student_id %}
     {% if student.github_username %}
       {% assign github_username = student.github_username %}
