Add TA to info page

--- a/info.html
+++ b/info.html
@@ -21,6 +21,12 @@ permalink: /info/index.html
 <p>Nika Fisher, Studio<br><a href="mailto:simovicn@newschool.edu">simovicn@newschool.edu</a></p>
 <p>Dylan Fisher, Lab<br><a href="mailto:fisherdm@newschool.edu">fisherdm@newschool.edu</a></p>
 
+<h3>Tutor Specialist</h3>
+
+<p>Lily Saeli<br><a href="mailto:saell650@newschool.edu">saell650@newschool.edu</a></p>
+<p>Lily will hold office hours each week. Please email her if you would like to schedule a time to meet one-on-one for some extra
+coding help, or to talk through technical challenges you may be having.</p>
+
 <hr>
 
 <p>This website is built using <a href="https://jekyllrb.com/">Jekyll</a> and hosted on <a href="https://pages.github.com/">GitHub Pages</a>. You can view the source code of this website at <a href="https://github.com/dylanfisher/ci19">https://github.com/dylanfisher/ci19</a>.</p>
