Add TA office hours spreadsheet link to info page

--- a/info.html
+++ b/info.html
@@ -24,8 +24,8 @@ permalink: /info/index.html
 <h3>Tutor Specialist</h3>
 
 <p>Lily Saeli<br><a href="mailto:saell650@newschool.edu">saell650@newschool.edu</a></p>
-<p>Lily will hold office hours each week. Please email her if you would like to schedule a time to meet one-on-one for some extra
-coding help, or to talk through technical challenges you may be having.</p>
+<p>Lily will hold office hours each week. Please use this <a href="https://docs.google.com/spreadsheets/d/1iWaOpTIeKEv0H7BuZKmm3QPMFJWzZtps1RuQLJm4D_o/edit?ts=5c523977">Google spreadsheet</a>
+  to schedule a time to meet one-on-one for some extra coding help, or to talk through technical challenges you may be having.</p>
 
 <hr>
 
