--- a/info.html
+++ b/info.html
@@ -27,6 +27,16 @@ permalink: /info/index.html
 <p>Lily will hold office hours each week. Please use this <a href="https://docs.google.com/spreadsheets/d/1iWaOpTIeKEv0H7BuZKmm3QPMFJWzZtps1RuQLJm4D_o/edit?ts=5c523977">Google spreadsheet</a>
   to schedule a time to meet one-on-one for some extra coding help, or to talk through technical challenges you may be having.</p>
 
+<h3>Core Interaction-wide tutor specialist</h3>
+
+<p>Eraince Wang<br><a href="mailto:wangp701@newschool.edu">wangp701@newschool.edu</a></p>
+<p>
+  Wednesdays, 3-5pm<br>
+  L408 XS Meeting Room
+</p>
+<p>Eraince will be available every Wednesday afternoon to answer coding questions for all Core Interaction students.</p>
+
+
 <hr>
 
 <p>This website is built using <a href="https://jekyllrb.com/">Jekyll</a> and hosted on <a href="https://pages.github.com/">GitHub Pages</a>. You can view the source code of this website at <a href="https://github.com/dylanfisher/ci19">https://github.com/dylanfisher/ci19</a>.</p>
