--- a/info.html
+++ b/info.html
@@ -21,13 +21,15 @@ permalink: /info/index.html
 <p>Nika Fisher, Studio<br><a href="mailto:simovicn@newschool.edu">simovicn@newschool.edu</a></p>
 <p>Dylan Fisher, Lab<br><a href="mailto:fisherdm@newschool.edu">fisherdm@newschool.edu</a></p>
 
-<h3>Tutor Specialist</h3>
+<h3 id="tutor-schedule">Tutor Specialist</h3>
 
 <p>Lily Saeli<br><a href="mailto:saell650@newschool.edu">saell650@newschool.edu</a></p>
 <p>Lily will hold office hours each week. Please use this <a href="https://docs.google.com/spreadsheets/d/1iWaOpTIeKEv0H7BuZKmm3QPMFJWzZtps1RuQLJm4D_o/edit?ts=5c523977">Google spreadsheet</a>
   to schedule a time to meet one-on-one for some extra coding help, or to talk through technical challenges you may be having.</p>
 
 <h3>Core Interaction-wide tutor specialist</h3>
+
+<p><a href="https://docs.google.com/spreadsheets/d/1yqviQcM3KGly1pCKnrEag9YNXc3BRX0ciYH5Rk9NbgY/edit?usp=sharing">Core Interaction Spring'19Tutoring Signup</a></p>
 
 <p>Eraince Wang<br><a href="mailto:wangp701@newschool.edu">wangp701@newschool.edu</a></p>
 <p>
